// SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
// SPDX-License-Identifier: Apache-2.0
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package workflows.v1;

import "workflow.proto";
import "common_carbide.proto";
import "forge_carbide.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/nvidia/bare-metal-manager-rest/workflow-schema/proto";

// CreateVPCRequest - request parameters of vpc
message CreateVPCRequest {
  string name = 1;
  string tenantOrganizationId = 2;
  optional WorkflowOptions options = 3;
  // ID of the vpc
  common.UUID vpc_id = 4;
}

// UpdateVPCRequest - update parameters of vpc
message UpdateVPCRequest {
  common.UUID id = 1;
  string name = 2;
  string tenantOrganizationId = 3;
  optional WorkflowOptions options = 4;
}

// DeleteVPCRequest - request to delete vpc
message DeleteVPCRequest {
  common.UUID id = 1;
  optional WorkflowOptions options = 2;
}

// VPCInfo - response for vpc create request
message VPCInfo {
  WorkflowStatus status = 1;
  ObjectStatus object_status = 2;
  string status_msg = 3;
  forge.Vpc vpc = 4;
}

// GetVPCRequest - request to fetch vpc
message GetVPCByIdRequest {
  common.UUID id = 1;
  optional WorkflowOptions options = 2;
}

// GetVPCRequest - request to fetch vpc
message GetVPCByNameRequest {
  string name = 1;
  optional WorkflowOptions options = 2;
}

// GetVPCRequest - request to fetch vpc
message GetVPCAllRequest {
  TransactionID transaction_id = 1;
  optional WorkflowOptions options = 2;
}

// GetVPCResponse - response for all get queries
message GetVPCResponse {
  WorkflowStatus status = 1;
  string status_msg = 2;
  forge.VpcList list = 3;
  TransactionID transaction_id = 4;
}

// VpcInventory - inventory info of all VPCs periodically collected
message VPCInventory {
  // List of VPCs
  repeated forge.Vpc vpcs = 1;
  // List of VPC propagation details
  repeated forge.NetworkSecurityGroupPropagationObjectStatus network_security_group_propagations = 6;
  // Reported timestamp of VPC inventory
  google.protobuf.Timestamp timestamp = 2;
  // Status of Inventory
  InventoryStatus inventory_status = 3;
  string status_msg = 4;
  // Inventory page information
  InventoryPage inventory_page = 5;
}
